--- a/lab.html
+++ b/lab.html
@@ -9,7 +9,7 @@
 <body>
     <body>
         <div id="app"></div>
-        <script src="./lab2.js"></script>
+        <script src="./lab.js"></script>
       </body>
 </body>
 </html>
